--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "twittler-react-hooks",
-  "version": "0.1.0",
+  "name": "pre-sprint-react-twittler-intro",
+  "author": "Hong Shik Branden Kim <kimploo@gmail.com>",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@codestates-cc/submission-npm": "^1.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "test": "react-scripts test --watchAll=false",
+    "watch": "react-scripts test --verbose",
+    "report": "react-scripts test --watchAll=false --json --outputFile=report.jest.json",
+    "submit": "codestates-submission"
   },
   "browserslist": {
     "production": [
