update package.json and lint, test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,8 @@
 {
   "extends": [
-    "plugin:react/recommended", 
+    "plugin:react/recommended",
     "plugin:jest-dom/recommended",
-    "plugin:prettier/recommended", 
-    "prettier/react"
+    "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
