--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "im-sprint-react-twittler-spa-reference",
+  "name": "react-twittler-spa",
   "author": "Hong Shik Branden Kim <kimploo@gmail.com>",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@codestates-cc/submission-npm": "^1.1.2",
+    "@codestates-cc/submission-npm": "^1.1.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
