--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test --watchAll=false --verbose",
     "watch": "react-scripts test --verbose",
     "report": "react-scripts test --watchAll=false --json --outputFile=report.jest.json",
-    "submit": "codestates-submission"
+    "submit": "codestates"
   },
   "browserslist": {
     "production": [
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "codestates-assignment-manager": "^1.8.0"
   }
 }
