--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,29 @@
-name: PR Test
+name: Bare Minimum Requirements
 
-on:
-  pull_request:
-    branches: [master] # master branch에 PR을 보낼 때 실행
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Bare Minimum Requirements
+        uses: actions/setup-node@v1
         with:
-          java-version: 11
-
-      # Gradle wrapper 파일 실행 권한주기
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      # Gradle test를 실행한다
-      - name: Test with Gradle
-        run: ./gradlew --info test
-        
-        - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: ${{ always() }}  # 테스트가 실패하여도 Report를 보기 위해 `always`로 설정
+          node-version: '16'
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: cache
         with:
-          files: build/test-results/**/*.xml
+        path: node_modules
+        key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies
+          if: steps.cache.outputs.cache-hit != 'true'
+          run: npm install
+      - run: npm run lint
+      if: ${{ always() }}
+      - run: npm run tsc
+        if: ${{ always() }}
+      - run: npm run build
+        if: ${{ always() }}
+
