--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,28 @@
-name: Bare Minimum Requirements
-
-on: [push, pull_request]
-
+name: 'test-every-push'
+on: push
 jobs:
   test:
+    name: Test lint, tsc, build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Bare Minimum Requirements
-        uses: actions/setup-node@v1
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: ${{ secrets.NODE_VERSION }}
       - name: Cache node modules
         uses: actions/cache@v2
         id: cache
         with:
-        path: node_modules
-        key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install Dependencies
-          if: steps.cache.outputs.cache-hit != 'true'
-          run: npm install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
       - run: npm run lint
-      if: ${{ always() }}
+        if: ${{ always() }}
       - run: npm run tsc
         if: ${{ always() }}
       - run: npm run build
         if: ${{ always() }}
-
